# actix-practice

./: Cargo.toml  README.md  Vite + React + TS.html  dev.sh  package.json  새 탭.html
Vite + React + TS_files/: client  main.tsx
client/: Cargo.toml  index.js
client/src/: lib.rs
client/src/module/: mod.rs
client/src/module/canvas/: canvas.rs
client/src/module/document/: document.rs
client/wasm-module/: Cargo.toml
client/wasm-module/src/: lib.rs
client/wasm-module/src/module/document/: document.rs
src/: file_watcher.rs  main.rs  render.rs  wasm_builder.rs  wss.rs
src/documents/: documents.rs
src/lab/: mod.rs
src/lab/response/: response.rs
src/lab/socket/: socket.rs
src/user/: user.service.rs
