[package]
name = "actix-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'Document',
  'Window',
  'HtmlElement',
  'HtmlCollection',
  'Node',
  'NodeList',
  'MouseEvent',
  'History',
]