[package]
name = "actix-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "./client" }
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1.0"
actix-files = "0.6.2"
notify = "5.0.0"
