[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Node',
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'console',
  'NodeList',
  'MouseEvent',
  'History',
]